kubernetes/apps/media/jellyfin/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
spec:
  ports:
  - name: https
    port: 8096
    targetPort: 8096
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: jellyfin-service-1
  labels:
    kubernetes.io/service-name: jellyfin
addressType: IPv4
ports:
  - name: ''
    appProtocol: http
    protocol: TCP
    port: 8096
endpoints:
  - addresses:
      - "192.168.1.211"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
  - host: "jellyfin.${SECRET_DOMAIN}"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: jellyfin
            port:
              number: 8096
